fix(signup): button size too small on safari
No font-size set means we're stuck with browser vendor defaults and
safari says "small"

--- a/www/assets/css/account.css
+++ b/www/assets/css/account.css
@@ -810,6 +810,7 @@ body.theme-b {
   display: inline-block;
   padding: 0.7em 2.2em;
   color: #111;
+  font-size: 1em;
 }
 
 .signup-flow-layout .form-input button[type="submit"]:disabled,
